<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_view">View</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="edit_cancel">Cancel</string>
    <string name="pencil">Pencil</string>
    <string name="chooser_share_post">Share post</string>
    <string name="edit_message">Edit Message</string>
    <string name="viewsCount">"Views: "</string>
    <string name="playVideo">Play Button</string>
    <string name="imageVideo">Video Image</string>
</resources>