<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <ImageView
        android:id="@+id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts.json/data/authorAvatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/description_post_author_avatar"
        android:src="@drawable/ic_netology_48dp" />

    <TextView
        android:id="@+id/author"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true" />

    <TextView
        android:id="@+id/published"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing" />

    <ImageButton
        android:id="@+id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_vert_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:text="@sample/posts.json/data/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:lineSpacingMultiplier="1.5"
        android:paddingTop="@dimen/common_spacing"
        android:paddingBottom="@dimen/common_spacing" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footer"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:checkable="true"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_like"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footer"
        style="@style/Widget.AppTheme.LikeButton"
        />
<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/like"-->
<!--        android:layout_width="24dp"-->
<!--        android:layout_height="24dp"-->
<!--        android:checkable="true"-->
<!--        android:contentDescription="@string/description_post_like"-->
<!--        android:layout_marginTop="@dimen/common_spacing"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/footer"-->
<!--        app:icon="@drawable/ic_like_24dp"-->
<!--        style="@style/Widget.AppTheme.LikeButton"-->
<!--        />-->

    <ImageButton
        android:id="@+id/share"
        app:layout_constraintStart_toEndOf="@+id/likes"
        app:layout_constraintTop_toBottomOf="@id/footer"
        app:srcCompat="@drawable/ic_share_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_share" />

    <ImageButton
        android:id="@+id/view"
        app:layout_constraintEnd_toStartOf="@id/views"
        app:layout_constraintTop_toBottomOf="@id/footer"
        app:srcCompat="@drawable/ic_views_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/counter_text_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_share" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/counter_text_spacing"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toTopOf="@id/like"
        tools:text="100K"/>

    <TextView
        android:id="@+id/shares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/counter_text_spacing"
        app:layout_constraintStart_toEndOf="@id/share"
        app:layout_constraintTop_toTopOf="@id/share"
        tools:text="100K"/>

    <TextView
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/counter_text_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/view"
        tools:text="100K"/>

</androidx.constraintlayout.widget.ConstraintLayout>